// Vitest Snapshot v1

exports[`InputNumber > InputNumber alignVue demo works fine 1`] = `
<t-space>
  <t-space
    direction="vertical"
  >
    <t-input-number
      align="left"
      default-value="100"
    />
    <t-input-number
      align="center"
      default-value="200"
    />
    <t-input-number
      align="right"
      default-value="300"
    />
  </t-space>
  <t-space
    direction="vertical"
    style="margin-left: 100px;"
  >
    <t-input-number
      align="left"
      default-value="100"
      theme="normal"
    />
    <t-input-number
      align="center"
      default-value="200"
      theme="normal"
    />
    <t-input-number
      align="right"
      default-value="300"
      theme="normal"
    />
  </t-space>
</t-space>
`;

exports[`InputNumber > InputNumber autoWidthVue demo works fine 1`] = `
<div>
  <t-input-number
    autowidth="true"
    min="0"
  />
</div>
`;

exports[`InputNumber > InputNumber centerVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-input-number
    autowidth=""
    max="5"
    step="0.1"
  />
  <t-input-number
    max="5"
    step="0.18"
    style="width: 200px;"
  />
  <t-input-number
    max="15"
    min="-2"
    style="width: 250px;"
    suffix="个"
    theme="row"
  />
</t-space>
`;

exports[`InputNumber > InputNumber defaultVue demo works fine 1`] = `
<div>
  <t-input-number
    defaultvalue="2021"
  />
</div>
`;

exports[`InputNumber > InputNumber disabledVue demo works fine 1`] = `
<div>
  <t-input-number
    disabled="true"
    max="15"
    min="-2"
  />
</div>
`;

exports[`InputNumber > InputNumber emptyVue demo works fine 1`] = `
<div>
  <t-input-number
    placeholder="输入"
  />
</div>
`;

exports[`InputNumber > InputNumber formatVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-input-number
    autowidth=""
    format="function (value) { return (value + \\" %\\"); }"
    max="15"
    min="-2"
  />
  <t-input-number
    autowidth=""
    decimalplaces="2"
    format="function (value, ref) {
	var fixedNumber = ref.fixedNumber;

	return (fixedNumber + \\" %\\");
}"
  />
</t-space>
`;

exports[`InputNumber > InputNumber largeNumberVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <t-input-number
      decimalplaces="2"
      largenumber=""
      step="1"
      style="width: 300px;"
    />
  </div>
  <div>
    <t-input-number
      largenumber=""
      step="0.888"
      style="width: 300px;"
    />
  </div>
</div>
`;

exports[`InputNumber > InputNumber leftVue demo works fine 1`] = `
<t-space>
  <t-input-number
    theme="column"
  />
  <t-input-number
    align="center"
    label="数字"
    max="15"
    min="-2"
    style="width: 150px;"
    theme="column"
  />
</t-space>
`;

exports[`InputNumber > InputNumber normalVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-input-number
    max="15"
    min="0"
    theme="normal"
  />
  <t-input-number
    align="right"
    theme="normal"
  />
  <t-input-number
    align="right"
    label="机器："
    suffix="台"
    theme="normal"
  />
</t-space>
`;

exports[`InputNumber > InputNumber sizeVue demo works fine 1`] = `
<div>
  <t-input-number
    max="15"
    min="-2"
    size="small"
  />
  <t-input-number
    max="15"
    min="-2"
    style="margin: 0px 50px;"
  />
  <t-input-number
    max="15"
    min="-2"
    size="large"
  />
</div>
`;

exports[`InputNumber > InputNumber statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  data-v-77658c68=""
>
  <div
    data-v-77658c68=""
  >
    <t-radio-group
      data-v-77658c68=""
      variant="default-filled"
    >
      <t-radio-button
        data-v-77658c68=""
        value="hide"
      >
        隐藏文本提示
      </t-radio-button>
      <t-radio-button
        data-v-77658c68=""
        value="align-left"
      >
        文本提示左对齐
      </t-radio-button>
      <t-radio-button
        data-v-77658c68=""
        value="align-input"
      >
        文本提示对齐输入框
      </t-radio-button>
    </t-radio-group>
  </div>
  <t-form
    data-v-77658c68=""
  >
    <!---->
    <!---->
    <t-form-item
      data-v-77658c68=""
      label="正常提示"
    >
      <t-input-number
        data-v-77658c68=""
        inputprops="[object Object]"
      />
    </t-form-item>
    <br
      data-v-77658c68=""
    />
    <t-form-item
      data-v-77658c68=""
      label="成功提示"
    >
      <t-input-number
        data-v-77658c68=""
        inputprops="[object Object]"
        status="success"
      />
    </t-form-item>
    <br
      data-v-77658c68=""
    />
    <t-form-item
      data-v-77658c68=""
      label="警告提示"
    >
      <t-input-number
        data-v-77658c68=""
        inputprops="[object Object]"
        status="warning"
      />
    </t-form-item>
    <br
      data-v-77658c68=""
    />
    <t-form-item
      data-v-77658c68=""
      label="错误提示"
    >
      <t-input-number
        data-v-77658c68=""
        inputprops="[object Object]"
        status="error"
      />
    </t-form-item>
    <br
      data-v-77658c68=""
    />
  </t-form>
</div>
`;

exports[`InputNumber > InputNumber stepVue demo works fine 1`] = `
<div>
  <t-input-number
    decimal-places="2"
    max="15"
    min="-5"
    step="1.2"
  />
</div>
`;
